--- a/views/login/login.pug
+++ b/views/login/login.pug
@@ -5,22 +5,22 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1')
   // ===============================================================================================
-  link(rel='icon' type='image/png' href='images/icons/favicon.ico')
+  link(rel='icon' type='image/png' href='/images/icons/favicon.ico')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='vendor/bootstrap/css/bootstrap.min.css')
+  link(rel='stylesheet' type='text/css' href='/vendor/bootstrap/css/bootstrap.min.css')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='fonts/font-awesome-4.7.0/css/font-awesome.min.css')
+  link(rel='stylesheet' type='text/css' href='/fonts/font-awesome-4.7.0/css/font-awesome.min.css')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='fonts/Linearicons-Free-v1.0.0/icon-font.min.css')
+  link(rel='stylesheet' type='text/css' href='/fonts/Linearicons-Free-v1.0.0/icon-font.min.css')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='vendor/animate/animate.css')
+  link(rel='stylesheet' type='text/css' href='/vendor/animate/animate.css')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='vendor/css-hamburgers/hamburgers.min.css')
+  link(rel='stylesheet' type='text/css' href='/vendor/css-hamburgers/hamburgers.min.css')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='vendor/select2/select2.min.css')
+  link(rel='stylesheet' type='text/css' href='/vendor/select2/select2.min.css')
   // ===============================================================================================
-  link(rel='stylesheet' type='text/css' href='css/util.css')
-  link(rel='stylesheet' type='text/css' href='css/main.css')
+  link(rel='stylesheet' type='text/css' href='/css/util.css')
+  link(rel='stylesheet' type='text/css' href='/css/main.css')
 body
 .limiter
   .container-login100
@@ -28,9 +28,7 @@ body
       form.login100-form.validate-form(action='/login/logInAuth' method='post')  
         span.login100-form-title.p-b-55
           | Login
-          br
           p #{error}
-          br
         .wrap-input100.validate-input.m-b-16(data-validate='Verifique el Correo: ex@abc.xyz')
           input.input100(type='text' name='email' placeholder='Correo')
           span.focus-input100
@@ -48,18 +46,17 @@ body
         .container-login100-form-btn.p-t-25
           button.login100-form-btn(type='submit' value='Submit')
             | Login
-         
         .text-center.w-full.p-t-115
           span.txt1
             | Contraseña olvidada? 
           a.txt1.bo1.hov1(href='#')
             | Recuperar
 // ===============================================================================================
-script(src='vendor/jquery/jquery-3.2.1.min.js')
+script(src='/vendor/jquery/jquery-3.2.1.min.js')
 // ===============================================================================================
-script(src='vendor/bootstrap/js/popper.js')
-script(src='vendor/bootstrap/js/bootstrap.min.js')
+script(src='/vendor/bootstrap/js/popper.js')
+script(src='/vendor/bootstrap/js/bootstrap.min.js')
 // ===============================================================================================
-script(src='vendor/select2/select2.min.js')
+script(src='/vendor/select2/select2.min.js')
 // ===============================================================================================
-script(src='js/main.js')
+script(src='/js/main.js')
