--- a/views/home/piepagina.pug
+++ b/views/home/piepagina.pug
@@ -5,7 +5,7 @@ footer.site-footer
         | Copyright &copy; 2019 Chile, Santiago
       .col-sm-6.text-right
         | Diseñado 
-        a(href='https://rigroup.cl') Rigroup.cl
+        a(href='https://rsigroup.cl') Rigroup.cl
 // /.site-footer
 // /#right-panel
 // Scripts
